# dimension20-nexus

./: .gitignore  CHANGELOG.md  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
d20nexus-frontend/: index.html  package-lock.json  package.json  vite.config.ts
d20nexus-frontend/public/: index.html
d20nexus-frontend/src/: App.css  App.js  App.tsx  index.css
d20nexus-frontend/src/pages/: About.js  About.tsx  Home.js  Home.tsx
docker/: Dockerfile.dev  Dockerfile.prod  docker-compose.dev.yaml  docker-compose.prod.yaml
scripts/: start-dev.sh
src/: .env  launch-python.sh
src/app/: app.py  conf.py
src/app/dal/models/: base.py  campaign_model.py  episode_model.py  review_model.py
src/app/dal/repositories/: campaign_repository.py  episode_repository.py
src/app/data/: campaigns.json  episodes.json
src/app/handlers/: campaign_handlers.py  episode_handler.py  health.py  mock_data.py
src/app/handlers/api_models/: campaigns.py  episode.py  review.py
src/app/models/: campaign.py
src/app/scripts/: seed.py
src/app/services/: campaign_manager.py  db_engine.py  episode_manager.py
