[tool.poetry]
name = "dimension20-nexus"
version = "0.1.0"
description = ""
authors = ["Oren Cohen <oren@orencreates.com>"]
readme = "README.md"
packages = [{include = "dimension20_nexus"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.6"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
pydantic-settings = "^2.6.1"


[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
